# wasmatrix

./: .formatter.exs  .gitignore  AGENTS.md  Makefile  PHASE1_COMPLETION.md  PHASE2_PROGRESS.md  erl_crash.dump  mix.exs
.kiro/specs/production-foundation/: design.md  requirements.md  tasks.md
.kiro/specs/wasm-orchestrator/: design.md  requirements.md  tasks.md
.kiro/specs/wasmatrix/: design.md  requirements.md  tasks.md
apps/wasmatrix_control/: mix.exs
apps/wasmatrix_control/lib/: wasmatrix_control.ex
apps/wasmatrix_control/lib/wasmatrix_control/: application.ex  models.ex  module_manager.ex  node_manager.ex
apps/wasmatrix_control/lib/wasmatrix_control/events/: event_system.ex  local_transport.ex
apps/wasmatrix_control/lib/wasmatrix_control/models/: event_message.ex  node.ex  scheduling_decision.ex  wasm_module.ex
apps/wasmatrix_control/lib/wasmatrix_control/scheduler/: proximity_scheduler.ex
apps/wasmatrix_control/lib/wasmatrix_control/state/: memory_backend.ex  state_manager.ex
apps/wasmatrix_control/test/: wasmatrix_control_test.exs
apps/wasmatrix_control/test/wasmatrix_control/: module_manager_test.exs  node_manager_test.exs
apps/wasmatrix_control/test/wasmatrix_control/events/: event_system_test.exs
apps/wasmatrix_control/test/wasmatrix_control/models/: event_message_test.exs  node_test.exs  scheduling_decision_test.exs  wasm_module_test.exs
apps/wasmatrix_control/test/wasmatrix_control/scheduler/: proximity_scheduler_test.exs
apps/wasmatrix_control/test/wasmatrix_control/state/: state_manager_test.exs
apps/wasmatrix_web/: mix.exs
apps/wasmatrix_web/lib/: wasmatrix_web.ex
apps/wasmatrix_web/lib/wasmatrix_web/: application.ex
apps/wasmatrix_web/test/: wasmatrix_web_test.exs
config/: config.exs
crates/: Cargo.toml
crates/coverage/: tarpaulin-report.html
crates/crates/coverage/: tarpaulin-report.html
crates/wasmatrix-agent/: Cargo.toml
crates/wasmatrix-agent/src/: lib.rs  main.rs  server.rs
crates/wasmatrix-agent/src/features/: mod.rs
crates/wasmatrix-agent/src/features/status_reporting/controller/: mod.rs
crates/wasmatrix-agent/src/features/status_reporting/repo/: mod.rs
crates/wasmatrix-agent/src/features/status_reporting/service/: mod.rs
crates/wasmatrix-control-plane/: Cargo.toml
crates/wasmatrix-control-plane/src/: lib.rs  main.rs  server.rs
crates/wasmatrix-control-plane/src/features/: mod.rs
crates/wasmatrix-control-plane/src/features/external_api/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/external_api/repo/: mod.rs
crates/wasmatrix-control-plane/src/features/external_api/service/: mod.rs
crates/wasmatrix-control-plane/src/features/instance_management/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/instance_management/repo/: mod.rs
crates/wasmatrix-control-plane/src/features/instance_management/service/: mod.rs
crates/wasmatrix-control-plane/src/features/leader_election/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/leader_election/repo/: mod.rs
crates/wasmatrix-control-plane/src/features/leader_election/service/: mod.rs
crates/wasmatrix-control-plane/src/features/metadata_persistence/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/metadata_persistence/repo/: mod.rs
crates/wasmatrix-control-plane/src/features/metadata_persistence/service/: mod.rs
crates/wasmatrix-control-plane/src/features/node_routing/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/node_routing/repo/: etcd.rs  mod.rs
crates/wasmatrix-control-plane/src/features/node_routing/service/: mod.rs
crates/wasmatrix-control-plane/src/features/observability/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/observability/repo/: mod.rs
crates/wasmatrix-control-plane/src/features/observability/service/: mod.rs
crates/wasmatrix-control-plane/src/features/production_config/controller/: mod.rs
crates/wasmatrix-control-plane/src/features/production_config/repo/: mod.rs
crates/wasmatrix-control-plane/src/features/production_config/service/: mod.rs
crates/wasmatrix-control-plane/src/shared/: error.rs  types.rs
crates/wasmatrix-core/: Cargo.toml
crates/wasmatrix-core/src/: capability.rs  isolation.rs  lib.rs  statelessness.rs
crates/wasmatrix-proto/: Cargo.toml  build.rs
crates/wasmatrix-proto/proto/: wasmatrix.proto
crates/wasmatrix-proto/src/: conversion.rs  lib.rs  protocol.rs  protocol_tests.rs
crates/wasmatrix-providers/: Cargo.toml
crates/wasmatrix-providers/src/: kv_provider.rs  lib.rs
crates/wasmatrix-providers/src/features/: mod.rs
crates/wasmatrix-providers/src/features/http_provider/: mod.rs
crates/wasmatrix-providers/src/features/http_provider/controller/: mod.rs
crates/wasmatrix-providers/src/features/http_provider/repo/: mod.rs
crates/wasmatrix-providers/src/features/http_provider/service/: mod.rs
crates/wasmatrix-providers/src/features/messaging_provider/: mod.rs
crates/wasmatrix-providers/src/features/messaging_provider/controller/: mod.rs
crates/wasmatrix-providers/src/features/messaging_provider/repo/: mod.rs
crates/wasmatrix-providers/src/features/messaging_provider/service/: mod.rs
crates/wasmatrix-providers/src/features/provider_lifecycle/controller/: mod.rs
crates/wasmatrix-providers/src/features/provider_lifecycle/repo/: mod.rs
crates/wasmatrix-providers/src/features/provider_lifecycle/service/: mod.rs
crates/wasmatrix-runtime/: Cargo.toml
crates/wasmatrix-runtime/src/: capabilities.rs  lib.rs  main.rs  runtime.rs  security.rs
docs/: CURRENT_IMPLEMENTATION_SUMMARY.md  PHASE1_TASKS_COMPLETED.md  PHASE2_COMPLETION.md  PHASE2_TASKS_PROGRESS.md  PHASE3_TASKS_PROGRESS.md  PRODUCTION_FOUNDATION_REST_API.md  PRODUCTION_MODE_BOOTSTRAP.md
