[workspace]
members = ["wasmatrix-core", "wasmatrix-control-plane", "wasmatrix-agent", "wasmatrix-providers", "wasmatrix-runtime", "wasmatrix-proto"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wasmatrix Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wasmatrix/wasmatrix"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
wasmtime = "18.0"
wasi-common = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
etcd-client = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
