[package]
name = "wasmatrix-control-plane"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Control plane for Wasmatrix orchestrator - manages instance lifecycle and capability assignments"

[[bin]]
name = "wasmatrix-control-plane"
path = "src/main.rs"

[features]
default = []
etcd = ["dep:etcd-client"]

[dependencies]
wasmatrix-core = { path = "../wasmatrix-core" }
wasmatrix-proto = { path = "../wasmatrix-proto" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# gRPC
prost-types = "0.12"
tonic-reflection = "0.11"

# API
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
prometheus = "0.13"

# Hashing
md5 = "0.7"

# Async
async-trait = "0.1"

# Time
chrono = { workspace = true }
uuid = { workspace = true }
etcd-client = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
