[package]
name = "wasmatrix-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasmatrix-core = { path = "../wasmatrix-core" }
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
protoc-bin-vendored = "3.0"
